fix: center demo video properly on mobile devices

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2195,10 +2195,10 @@
   
   .demo-video {
     order: 2;
-    min-height: 600px;
+    min-height: 400px;
     width: 100%;
-    max-width: 200%;
-    margin: 0 -50%;
+    max-width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2207,7 +2207,7 @@
   
   .video-wrapper {
     width: 100%;
-    max-width: 200%;
+    max-width: 100%;
     height: auto;
     aspect-ratio: 1;
     display: flex;
@@ -2447,9 +2447,9 @@
   }
   
   .demo-video {
-    min-height: 550px;
-    max-width: 200%;
-    margin: 0 -50%;
+    min-height: 350px;
+    max-width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
